# cmake-test

./: CMakeLists.txt  main.c
lib/: CMakeLists.txt
lib/common/: CMakeLists.txt  list.c
lib/common/list/: CMakeLists.txt  list.h  list_test.c
